--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            background-color: black;
         }
     </style>
+    <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
 </head>
 <body>
 <div class="wrap">
