--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         }
     </style>
     <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
+    <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
 </head>
 <body>
 <div class="wrap">
